# TechAppsDipNative

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.cmd  build.sh  cmake.sh
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.projects/com.petronas.dsg/: .location  .markers  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/com.petronas.dsg.mock/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/com.petronas.entd/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/com.petronas.entd.dsg/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: 2484866498.index  255755975.index  2710952184.index  externalFilesCache  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.wildwebdeveloper.xml/: system-catalog.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
.metadata/.plugins/org.eclipse.wst.xml.core/: system_catalog.xml
runtime-com.petronas.dsg.mock/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
runtime-com.petronas.dsg.mock/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/.metadata/: version.ini
src/.metadata/.mylyn/.taskListIndex/: segments_1
src/.metadata/.plugins/org.eclipse.cdt.core/: DipSlopePWDjni.language.settings.xml  shareddefaults.xml  test_native.1637044478118.pdom  test_native.language.settings.xml  testing.1637110530210.pdom  testing.language.settings.xml
src/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.core.resources/: 11.snap  13.snap  14.snap
src/.metadata/.plugins/org.eclipse.core.resources/.root/: 11.tree  13.tree  14.tree
src/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
src/.metadata/.plugins/org.eclipse.debug.core/.launches/: CallNative.launch  OsChecker.launch  TechApps.Dip.Native.exe.launch  TestJNI.launch  TestNative (1).launch  TestNative.launch  TestNativeCal.launch  TestNativeSum.launch  com.petronas.dsg.mock.launch  javah.launch  test_native.exe.launch  testing.exe.launch
src/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
src/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/.metadata/.plugins/org.eclipse.jdt.core/: 1157450442.index  139714729.index  1694235676.index  2911809021.index  4180757291.index  815453835.index  externalFilesCache  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
src/.metadata/.plugins/org.eclipse.jdt.debug.ui/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
src/.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml  dialog_settings.xml
src/.metadata/.plugins/org.eclipse.pde.core/: SavedExternalPluginList.txt
src/.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
src/.metadata/.plugins/org.eclipse.pde.ui/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
src/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.wildwebdeveloper.xml/: system-catalog.xml
src/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
src/TechApps.DSG/: .project  build.properties
src/TechApps.DSG.Mock/: .project  plugin.xml
src/TechApps.Dip/: .classpath  .project  build.properties  plugin.xml
src/TechApps.Dip.DSG/: .project  plugin.xml
src/TechApps.Dip.Feature/: .project  feature.xml
src/TechApps.Dip.Native/: .cproject  .project  CMakeLists.txt
src/TechApps.Dip.Native/jni/: CMakeLists.txt  DipJni.cpp  DipJni.h  DipSlopePWD.cpp  DipSlopePWD.exe.stackdump  JavaNative.cpp  com_petronas_dip_CallNative.h  dip.h  index3d.h
src/TechApps.Dip.Native/src/: CMakeLists.txt  Dip.cpp  Dip.h  Index3D.cpp  index3d.h
src/TechApps.ENTD.DSG/: .project  plugin.xml
src/TechApps.ENTD.Native/: CMakeLists.txt
src/TechApps.ENTD.Native/mpi/: CMakeLists.txt  args.h  main.cpp
src/TechApps.ENTD.Native/segy/: CMakeLists.txt  DataDefs.h  DataRange.cpp  DataRange.h  PspaException.cpp  PspaException.h  PspaMath.cpp  PspaMath.h  SegyData.cpp  SegyData.h  SegyFileHeader.cpp  SegyFileHeader.h  SegyRead.cpp  SegyRead.h  SegyTraceHeader.cpp  SegyTraceHeader.h  SegyUtil.cpp  SegyUtil.h  SegyWrite.cpp  SegyWrite.h  SeisData.cpp  SeisData.h  SeisTrace.cpp  SeisTrace.h
src/TechApps.ENTD.Native/src/: ArrayToBit.cpp  ArrayToBit.h  ArrayUtil.h  CMakeLists.txt  Entd.cpp  Entd.h  Row.h  Segment.cpp  Segment.h  convolution.h  cubing.cpp  cubing.h
src/TechApps.ENTD.Native/tests/: CMakeLists.txt  main.cpp  main_v2.cpp
src/TechApps.ENTD.RCP/: .classpath  .project  build.properties  plugin.xml
src/native/: .classpath  .project
src/native/src/: OsChecker.java
src/native/src/test/: TestJNI.java  TestNative.java  TestNativeSum.java
src/test_native/: .cproject  .project
src/test_native/Debug/: makefile
src/test_native/Debug/src/: subdir.mk
src/test_native/Release/: makefile
src/test_native/Release/src/: subdir.mk
src/test_native/src/: com_petronas_dip_CallNative.h  test_native.cpp
src/testing/: .cproject
src/testing/Debug/: makefile
src/testing/Debug/src/: subdir.mk
src/testing/src/: testing.cpp
(+117 files in other folders)
